@@ -1,3 +1,8 @@
+2005-11-03  Alexander Larsson  <alexl@redhat.com>
+
+	* lib/cache.py:
+	Use ~/.sabayon/profile_cache, not ~/.profile_cache
+
 2005-11-02  Alexander Larsson  <alexl@redhat.com>
 
 	* lib/storage.py:
